--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -371,7 +371,7 @@ footer {
     transform: rotate(180deg);
 }
 
-/*@media screen and (max-width: 780px) {*/
+@media screen and (min-width: 768px) {
 
 /*form#city-input {*/
     /*color: #515151;*/
@@ -380,5 +380,13 @@ footer {
     /*font-size: .5rem;*/
     /*width: 3em;*/
 /*}*/
+    .btn-link {
+        margin-top: 11%;
+    }
+}
 
-/*}*/
+#burger {
+    position: absolute;
+    top: -1%;
+    right: 1%;
+}
