--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -21,12 +21,12 @@
 
 <!--NAV HOME / JOBS FRAGMENT-->
 <nav th:fragment="navbarSearch" class="navbar navbar-fixed-top navbar-inverse">
-    <div class="container-fluid row">
+    <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header col-1 col-sm-2 col-md-2 col-lg-2">
             <a class="navbar-brand" href="/">LifeMap</a>
         </div>
-        <div class="navbar-form col-2 col-sm-4 col-md-7 col-lg-7">
+        <div id="test-search" class="navbar-form col-2 col-sm-4 col-md-7 col-lg-7">
             <div class="form-group">
                 <input type="text" id="city-input" class="form-control" placeholder="Enter Address" />
                 <button type="submit" class="btn btn-default go">Search</button>
@@ -45,8 +45,8 @@
                 </li>
             </ul>
         </div><!-- /.navbar-collapse -->
-        <div class="col-2 col-sm-1 col-md-1 col-lg-1">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <div class="">
+            <button type="button" id="burger" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
